<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        >
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/trash_icon"
            >
        </ImageView>
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textColor="@color/orange"
            android:text="@string/app_name"
            android:fontFamily="@font/pbold"
            android:textSize="35dp"
            android:textStyle="bold"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:text="Gabung dan Jadilah Bagian dari Perubahan Hijau"
        android:fontFamily="@font/pmedium"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextUsername"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:fontFamily="@font/pregular"
            android:hint="@string/username"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:passwordToggleEnabled="true"
        app:layout_constraintTop_toBottomOf="@+id/textInputUsername">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPassword"
            android:inputType="textPassword"
            android:maxLines="1"
            android:hint="@string/password"
            android:layout_height="50dp"
            android:fontFamily="@font/pregular"
            android:layout_width="match_parent"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="48dp"
        android:layout_marginRight="24dp"
        android:text="@string/btn_login"
        android:fontFamily="@font/pmedium"
        android:textSize="20dp"
        app:cornerRadius="10dp"
        android:backgroundTint="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputPassword">


    </com.google.android.material.button.MaterialButton>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="#3385DA5E"
        app:layout_constraintStart_toStartOf="parent">

        <View
            android:layout_centerHorizontal="true"
            android:layout_width="100dp"
            android:layout_height="10dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/line"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_alignParentBottom="true"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account_yet"
                android:fontFamily="@font/pregular"
                >

            </TextView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_regis"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginLeft="24dp"
                android:text="@string/btn_regis"
                android:fontFamily="@font/pmedium"
                android:textSize="15sp"
                app:cornerRadius="10dp"
                android:textColor="@color/orange"
                android:backgroundTint="@android:color/transparent"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                app:strokeColor="@color/orange"
                app:layout_constraintEnd_toEndOf="parent"
                app:strokeWidth="3dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputPassword"/>
        </LinearLayout>


    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>